feat: integrated terminal

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -13,7 +13,7 @@ tasks:
 
   sshtest:
     cmds:
-      - cmd: docker rm -f sshdummy
+      - cmd: podman rm -f sshdummy
         ignore_error: true
-      - cmd: docker build --build-arg PASSWORD=taskwire -t sshdummy -f test/ssh/Dockerfile .
-      - cmd: docker run --name sshdummy -d -p 2222:22 sshdummy
+      - cmd: podman build --build-arg PASSWORD=taskwire -t sshdummy -f test/ssh/Dockerfile .
+      - cmd: podman run --name sshdummy -d -p 2222:22 sshdummy
