--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   page_transition: ^2.0.5
   shared_preferences: ^2.0.15
   flutter_bloc: ^8.0.1
+  dartssh2: ^2.7.1
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
