--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,9 +70,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/logo/
-    - assets/icons/blue/
-    - assets/icons/green/
-    - assets/icons/yellow/
+    - assets/icons/developer_ip/light/svg/
+    - assets/icons/developer_ip/regular/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
