--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   dartssh2: ^2.7.1
   equatable: ^2.0.3
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
