--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   dartssh2: ^2.7.1
   equatable: ^2.0.3
   url_launcher: ^6.1.5
+  hydrated_bloc: ^8.1.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
