--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  ffi: ^1.2.1
   flutter_svg: ^1.1.0
   page_transition: ^2.0.5
   shared_preferences: ^2.0.15
@@ -44,6 +43,10 @@ dependencies:
   url_launcher: ^6.1.5
   hydrated_bloc: ^8.1.0
   path_provider: ^2.0.11
+  cryptography: ^2.0.5
+  pointycastle: ^3.6.1
+  pem: ^2.0.1
+  nanodart: ^2.0.0
 
 dev_dependencies:
   flutter_test:
